[package]
name = "pachou"
version = "0.1.0"
authors = ["sunmh <sunmh@justsafe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.0", features = ["serde"] }
log = "0.4"
log4rs = "0.13.0"

tokio = { version = "1.0", features = ["full"]}

reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

once_cell = "1.5.2"
